--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "react-dom": "^0.14.9 || ^15.3.0"
   },
   "scripts": {
+    "build": "gulp build",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
